--- a/application.yaml
+++ b/application.yaml
@@ -5,7 +5,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone: ${EUREKA_SERVER_ADDRESS:http://eurekaserver:8761/eureka}
+      default-zone: ${EUREKA_SERVER_ADDRESS:http://serviceregistry:8761/eureka}
 
 okta:
   oauth2:
